Atualizando server para integração